use intellij for testing http methods

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.test2</groupId>
-	<artifactId>test2</artifactId>
+	<artifactId>bootingSpring</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>test2</name>
 	<description>Demo project for Spring Boot</description>
